--- a/vite_interactive-rating-component-main/package.json
+++ b/vite_interactive-rating-component-main/package.json
@@ -1,17 +1,21 @@
 {
-  "name": "vite_interactive-rating-component-main",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
-  },
-  "devDependencies": {
-    "vite": "^5.3.4"
-  },
-  "dependencies": {
-    "sass": "^1.77.8"
-  }
+	"name": "vite_interactive-rating-component-main",
+	"private": true,
+	"version": "0.0.0",
+	"type": "module",
+	"scripts": {
+		"dev": "vite",
+		"build": "vite build",
+		"preview": "vite preview",
+		"vercel": "vercel",
+		"vercel:login": "vercel login",
+		"vercel:deploy": "vercel --prod"
+	},
+	"devDependencies": {
+		"vercel": "^35.2.2",
+		"vite": "^5.3.4"
+	},
+	"dependencies": {
+		"sass": "^1.77.8"
+	}
 }
