--- a/vite_interactive-rating-component-main/package.json
+++ b/vite_interactive-rating-component-main/package.json
@@ -6,13 +6,9 @@
 	"scripts": {
 		"dev": "vite",
 		"build": "vite build",
-		"preview": "vite preview",
-		"vercel": "vercel",
-		"vercel:login": "vercel login",
-		"vercel:deploy": "vercel --prod"
+		"preview": "vite preview"
 	},
 	"devDependencies": {
-		"vercel": "^35.2.2",
 		"vite": "^5.3.4"
 	},
 	"dependencies": {
